// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there are multiple comments 1`] = `
<ul
  className="sc-bdVaJa kRDQbv"
>
  <li
    className="sc-bwzfXH hkazQv"
  >
    <span
      className="sc-htpNat gAMvjR"
    >
      ghandi
    </span>
    <span
      className="sc-bxivhb ijKRfN"
    >
      Where there is love there is life
    </span>
  </li>
  <li
    className="sc-bwzfXH hkazQv"
  >
    <span
      className="sc-htpNat gAMvjR"
    >
      Ariana Grande
    </span>
    <span
      className="sc-bxivhb ijKRfN"
    >
      So true!
    </span>
  </li>
</ul>
`;

exports[`renders correctly when there is only one comment 1`] = `
<ul
  className="sc-bdVaJa kRDQbv"
>
  <li
    className="sc-bwzfXH hkazQv"
  >
    <span
      className="sc-htpNat gAMvjR"
    >
      legend27
    </span>
    <span
      className="sc-bxivhb ijKRfN"
    >
      This Taylor Swift song is amzaing
    </span>
  </li>
</ul>
`;
